--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -53,6 +53,21 @@ nav#menu li{
     background-color: #dddddd;
     padding: 10px;
     margin: 2px;
+    transition: background-color 1s;
+}
+
+nav#menu li:hover{
+    background-color: #606060;
+}
+
+nav#menu a{
+    text-decoration: none;
+    color: #000;
+}
+
+nav#menu a:hover{
+    color: #ffffff;
+    text-decoration: underline;
 }
 
 nav#menu h1{
