--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,8 +1,30 @@
 @charset "UTF-8";
 
+body{
+    background-color: #dddddd;
+}
+
+div#interface{
+    width: 900px;
+    background-color: #ffffff;
+    margin: -20px auto 0px auto;
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+}
+
 p{
     text-align: justify;
     text-indent: 50px;
+}
+
+header#cabecalho img#icone{
+    position: absolute;
+    left: 957px;
+    top: 50px;
+}
+
+header#cabecalho{
+    
 }
 
 /* Formatação de imagens com legendas */
@@ -45,7 +67,7 @@ nav#menu ul{
     text-transform: uppercase;
     position: absolute;
     top: -20px;
-    left: 300px;
+    left: 480px;
 }
 
 nav#menu li{
