--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face{
+    font-family: 'FonteLogo';
+    src: url(../_fonts/bubblegum-sans-regular.otf);
+}
 
 body{
     background-color: #dddddd;
@@ -20,11 +24,30 @@ p{
 header#cabecalho img#icone{
     position: absolute;
     left: 957px;
-    top: 50px;
+    top: 65px;
 }
 
 header#cabecalho{
-    
+    border-bottom: 1px #606060 solid;
+    height: 150px;
+    background: url(../_imagens/glass-logo-peq.jpg)no-repeat 0px 80px;;
+}
+
+header#cabecalho h1{
+    font-family: Arial, sans-serif;
+    font-size: 30pt;
+    color: #606060;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+    padding: 0px;
+    margin-bottom: 0px;
+}
+
+header#cabecalho h2{
+    font-family: Arial, sans-serif;
+    color: #888888;
+    font-size: 15pt;
+    padding: 0px;
+    margin-top: 0px;
 }
 
 /* Formatação de imagens com legendas */
