--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 @font-face{
     font-family: 'FonteLogo';
     src: url(../_fonts/bubblegum-sans-regular.otf);
@@ -34,7 +35,7 @@ header#cabecalho{
 }
 
 header#cabecalho h1{
-    font-family: Arial, sans-serif;
+    font-family: 'FonteLogo', sans-serif;
     font-size: 30pt;
     color: #606060;
     text-shadow: 1px 1px 1px rgba(0,0,0,.6);
@@ -43,7 +44,7 @@ header#cabecalho h1{
 }
 
 header#cabecalho h2{
-    font-family: Arial, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     color: #888888;
     font-size: 15pt;
     padding: 0px;
