--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -119,3 +119,26 @@ nav#menu a:hover{
 nav#menu h1{
     display: none;
 }
+
+section#corpo{
+    display: block;
+    width: 520px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 15px;
+}
+
+aside#lateral{
+    display: block;
+    width: 350px;
+    float: right;
+}
+
+footer#rodape{
+    clear: both;
+    border-top: 1px solid #606060;
+}
+
+footer#rodape p{
+    text-align: center;
+}
