Audio e Video em HTML5

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -146,6 +146,10 @@ article#noticia-principal h2{
     margin: 10px 0px 10px 0px;
 }
 
+article video#video-article{
+    width: 500px;
+}
+
 header#cabecalho-artigo h1{
     font-family: 'FonteLogo', sans-serif;
     font-size: 20pt;
@@ -231,6 +235,10 @@ aside#lateral h2{
     font-size: 12pt;
     color: #ffffff;
     padding: 5px;
+}
+
+aside video#video-aside{
+    width: 350px;
 }
 
 footer#rodape{
